<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.MenuFragment">


    <TextView
        android:id="@+id/mainMenuTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/main_menu_str"
        android:textSize="70sp" />

    <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/go_to_question_fragment"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:minWidth="420dp"
        android:text="@string/start_testing_str"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/set_point_number"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:minWidth="420dp"
        android:text="@string/change_point_number_str"
        android:textColor="#ffffff"
        android:textSize="30sp" />
</RelativeLayout>